syntax = "proto3";

package api;


import "google/api/annotations.proto";

option go_package = "github.com/aide-family/moon/api;api";
option java_multiple_files = true;
option java_package = "api";

service Alert {
  rpc Hook (AlarmItem) returns (HookReply) {
    option (google.api.http) = {
      post: "/v1/alert/hook"
      body: "*"
    };
  }
}

message HookReply {
  // 响应消息
  string msg = 1;
  // 响应码
  int32 code = 2;
}

message AlarmItem {
  // 接收者
  string receiver = 1;
  // 报警状态, firing, resolved
  string status = 2;
  // 告警列表
  repeated AlertItem alerts = 3;
  // 告警组标签
  map<string, string> groupLabels = 4;
  // 公共标签
  map<string, string> commonLabels = 5;
  // 公共注解
  map<string, string> commonAnnotations = 6;
  // 外部链接
  string externalURL = 7;
  // 版本
  string version = 8;
  // 告警组key
  string groupKey = 9;
  // 截断告警数
  int32 truncatedAlerts = 10;
  // 指纹
  string fingerprint = 11;
}

// 告警明细
message AlertItem {
  // 告警状态, firing, resolved
  string status = 1;
  // 标签
  map<string, string> labels = 2;
  // 注解
  map<string, string> annotations = 3;
  // 开始时间
  string startsAt = 4;
  // 结束时间, 空表示未结束
  string endsAt = 5;
  // 告警生成链接
  string generatorURL = 6;
  // 指纹
  string fingerprint = 7;
}